# cvbuilder

.github/workflows/: backend.yml
backend/: .dockerignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06342d79ef0b_basics_scheme.py  85a989d22405_add_the_user_table.py  9e5f69e6079b_add_the_images.py  a05e51e23622_add_the_address.py
backend/config/: openai.py  redis.py
backend/controller/: authcontroller.py  cv_generator.py  resume.py
backend/db/: db.py  scheme.py
backend/middleware/: auth.py  rediscache.py  retelimter.py
backend/models/: auth_models.py  cv_models.py
backend/routes/: __init__.py  auth.py  cv_gen.py  resumeop.py  upload.py
backend/utils/: cloudinaryconfig.py  context_manager.py  jwtgen.py
deployment/: deploy.sh  envs.env  stop.sh
deployment/docker/: docker-compose.blue.yml  docker-compose.green.yml  docker-compose.nginx.yml  docker-compose.redis.yml
deployment/nginx/: default.conf  default_balanced.conf  default_green.conf
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/resusme/: page.tsx
frontend/src/app/template/: page.tsx
frontend/src/components/: AuthContext.tsx
frontend/src/components/from/: DesktopFrom.tsx  MobileFrom.tsx
frontend/src/constants/: templates.ts
frontend/src/hooks/: useStepNavigation.ts
frontend/src/lib/: axios.ts
frontend/src/store/: resumeStore.ts
frontend/src/types/: next-auth.d.ts
(+21 files in other folders)
